[project]
name = "esddns"
version = "0.0.1"
authors = [
    { email = "aziz@platformrnd.com" },
    { name  = "Aziz Kurbanov"}
]
description = "Open Source Dynamic DNS"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["dyndns", "dynamicdns", "dns", "dynamic"]

classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent"
]

[project.urls]
issue_tracker = "https://github.com/sqe/esddns/issues"
repository = "https://github.com/sqe/esddns"