[metadata]
name = esddns
version = 0.0.1
author = Aziz Kurbanov
author_email = aziz@platformrnd.com
description = Open Source Dynamic DNS
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sqe/esddns
project_urls =
    Bug Tracker = https://github.com/sqe/esddns/issues
    repository = https://github.com/sqe/esddns
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:

[options.packages.find]
where = .